--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -8,61 +8,91 @@
 	<url>http://unbbayes.sourceforge.net</url>
 	<licenses>
 		<license>
-			<name>GNU General Public License, Version 3, 29 June 2007</name>
+			<name>
+				GNU General Public License, Version 3, 29 June 2007
+			</name>
 			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
 			<distribution>manual</distribution>
 		</license>
 	</licenses>
 	<issueManagement>
-		<system>Bugzilla</system>
-		<url>https://bugzilla.wakaleo.com/</url>
+		<system>SourceForge Tracker</system>
+		<url>http://sourceforge.net/tracker/?group_id=47519</url>
 	</issueManagement>
-	<ciManagement>
+	<!-- ciManagement>
 		<system>Continuum</system>
 		<url>http://integrationserver.wakaleo.com/continuum</url>
 		<notifiers>
-			<notifier>
-				<type>mail</type>
-				<address>rommel.carvalho@gmail.com</address>
-			</notifier>
+		<notifier>
+		<type>mail</type>
+		<address>rommel.carvalho@gmail.com</address>
+		</notifier>
 		</notifiers>
-	</ciManagement>
+		</ciManagement -->
 	<inceptionYear>2001</inceptionYear>
 	<mailingLists>
 		<mailingList>
-			<name>Announcements. All messages on this list are also sent to the users list.</name>
-			<subscribe>unbbayes-announce-subscribe@lists.sourceforge.net</subscribe>
-			<unsubscribe>unbbayes-announce-unsubscribe@lists.sourceforge.net</unsubscribe>
+			<name>
+				Announcements. All messages on this list are also sent
+				to the users list.
+			</name>
+			<subscribe>
+				unbbayes-announce-subscribe@lists.sourceforge.net
+			</subscribe>
+			<unsubscribe>
+				unbbayes-announce-unsubscribe@lists.sourceforge.net
+			</unsubscribe>
 			<post>unbbayes-announce@lists.sourceforge.net</post>
 			<archive>
-				http://lists.sourceforge.net/mailman/listinfo/unbbayes-announce
+				http://sourceforge.net/mailarchive/forum.php?forum_name=unbbayes-announce
 			</archive>
 		</mailingList>
 		<mailingList>
-			<name>A subscriber-only list for those interested in developing UnBBayes.</name>
-			<subscribe>unbbayes-developers-subscribe@lists.sourceforge.net</subscribe>
-			<unsubscribe>unbbayes-developers-unsubscribe@lists.sourceforge.net</unsubscribe>
+			<name>
+				A subscriber-only list for those interested in
+				developing UnBBayes.
+			</name>
+			<subscribe>
+				unbbayes-developers-subscribe@lists.sourceforge.net
+			</subscribe>
+			<unsubscribe>
+				unbbayes-developers-unsubscribe@lists.sourceforge.net
+			</unsubscribe>
 			<post>unbbayes-developers@lists.sourceforge.net</post>
 			<archive>
-				http://lists.sourceforge.net/mailman/listinfo/unbbayes-developers
+				http://sourceforge.net/mailarchive/forum.php?forum_name=unbbayes-developers
 			</archive>
 		</mailingList>
 		<mailingList>
-			<name>A subscriber-only list for those interested in translating UnBBayes.</name>
-			<subscribe>unbbayes-translators-subscribe@lists.sourceforge.net</subscribe>
-			<unsubscribe>unbbayes-translators-unsubscribe@lists.sourceforge.net</unsubscribe>
+			<name>
+				A subscriber-only list for those interested in
+				translating UnBBayes.
+			</name>
+			<subscribe>
+				unbbayes-translators-subscribe@lists.sourceforge.net
+			</subscribe>
+			<unsubscribe>
+				unbbayes-translators-unsubscribe@lists.sourceforge.net
+			</unsubscribe>
 			<post>unbbayes-translators@lists.sourceforge.net</post>
 			<archive>
-				http://lists.sourceforge.net/mailman/listinfo/unbbayes-translators
+				http://sourceforge.net/mailarchive/forum.php?forum_name=unbbayes-translators
 			</archive>
 		</mailingList>
 		<mailingList>
-			<name>A subscriber-only list for those interested in discussing about UnBBayes.</name>
-			<subscribe>unbbayes-users-subscribe@lists.sourceforge.net</subscribe>
-			<unsubscribe>unbbayes-users-unsubscribe@lists.sourceforge.net</unsubscribe>
+			<name>
+				A subscriber-only list for those interested in
+				discussing about UnBBayes.
+			</name>
+			<subscribe>
+				unbbayes-users-subscribe@lists.sourceforge.net
+			</subscribe>
+			<unsubscribe>
+				unbbayes-users-unsubscribe@lists.sourceforge.net
+			</unsubscribe>
 			<post>unbbayes-users@lists.sourceforge.net</post>
 			<archive>
-				http://lists.sourceforge.net/mailman/listinfo/unbbayes-users
+				http://sourceforge.net/mailarchive/forum.php?forum_name=unbbayes-users
 			</archive>
 		</mailingList>
 	</mailingLists>
@@ -74,7 +104,8 @@
 			<roles>
 				<role>Project Manager</role>
 			</roles>
-			<organization>Universidade de Brasília - UnB</organization>
+			<organization>University of Brasilia - UnB</organization>
+			<organizationUrl>www.unb.br</organizationUrl>
 			<timezone>-3</timezone>
 		</developer>
 		<developer>
@@ -85,7 +116,8 @@
 				<role>Project Manager</role>
 				<role>Architect</role>
 			</roles>
-			<organization>Universidade de Brasília - UnB</organization>
+			<organization>University of Brasilia - UnB</organization>
+			<organizationUrl>www.unb.br</organizationUrl>
 			<timezone>-3</timezone>
 		</developer>
 		<developer>
@@ -96,6 +128,7 @@
 				<role>Consultant</role>
 			</roles>
 			<organization>George Mason University - GMU</organization>
+			<organizationUrl>www.gmu.edu</organizationUrl>
 			<timezone>-3</timezone>
 		</developer>
 		<developer>
@@ -105,7 +138,8 @@
 			<roles>
 				<role>Developer</role>
 			</roles>
-			<organization>Universidade de Brasília - UnB</organization>
+			<organization>University of Brasilia - UnB</organization>
+			<organizationUrl>www.unb.br</organizationUrl>
 			<timezone>-3</timezone>
 		</developer>
 		<developer>
@@ -115,21 +149,36 @@
 			<roles>
 				<role>Developer</role>
 			</roles>
-			<organization>Universidade de Brasília - UnB</organization>
+			<organization>University of Brasilia - UnB</organization>
+			<organizationUrl>www.unb.br</organizationUrl>
 			<timezone>-3</timezone>
 		</developer>
 	</developers>
+	<contributors>
+		<contributor>
+			<name>Dr. Kathryn Blackmond Laskey</name>
+			<email>klaskey@gmu.edu</email>
+			<url>http://ite.gmu.edu/~klaskey</url>
+			<organization>George Mason University - GMU</organization>
+			<organizationUrl>http://www.gmu.edu</organizationUrl>
+			<roles>
+				<role>Consultant</role>
+			</roles>
+			<timezone>-4</timezone>
+		</contributor>
+	</contributors>
+
 	<scm>
 		<connection>
-			scm:svn:http://unbbayes.cvs.sourceforge.net/unbbayes/
+			scm:cvs:pserver:anonymous@unbbayes.cvs.sourceforge.net:/cvsroot/unbbayes:UnBBayes
 		</connection>
 		<developerConnection>
-			scm:svn:http://unbbayes.cvs.sourceforge.net/unbbayes/
+			scm:cvs:ext:developername@unbbayes.cvs.sourceforge.net:/cvsroot/unbbayes:UnBBayes
 		</developerConnection>
 		<url>http://unbbayes.cvs.sourceforge.net/unbbayes/</url>
 	</scm>
 	<organization>
-		<name>Universidade de Brasília - UnB</name>
+		<name>University of Brasilia - UnB</name>
 		<url>http://www.unb.br</url>
 	</organization>
 	<build>
@@ -199,7 +248,7 @@
 		</plugins>
 	</build>
 	<dependencies>
-	
+
 		<!-- PANEL-AS-IMAGE -->
 		<dependency>
 			<!-- Used for saving BN, ID, MSBN, etc as images. -->
@@ -208,19 +257,19 @@
 			<version>1.0</version>
 		</dependency>
 		<!-- PANEL-AS-IMAGE -->
-		
+
 		<!-- JAVAHELP -->
 		<dependency>
 			<!-- JavaHelp is an open source software, a full-featured, platform-independent,
-			 extensible help system that enables you to incorporate online help in applets,
-			 components, applications, operating systems, and devices. 
-			 http://java.sun.com/javase/technologies/desktop/javahelp/ -->
+				extensible help system that enables you to incorporate online help in applets,
+				components, applications, operating systems, and devices. 
+				http://java.sun.com/javase/technologies/desktop/javahelp/ -->
 			<groupId>javax.help</groupId>
 			<artifactId>javahelp</artifactId>
 			<version>2.0.02</version>
 		</dependency>
 		<!-- JAVAHELP -->
-		
+
 		<!-- PLOT-GRAPHICS -->
 		<dependency>
 			<!-- Used for plotting some graphics. -->
@@ -229,23 +278,23 @@
 			<version>1.0</version>
 		</dependency>
 		<!-- PLOT-GRAPHICS -->
-		
+
 		<!-- JUNIT -->
 		<dependency>
 			<!-- JUnit is a simple framework to write repeatable tests. 
-			It is an instance of the xUnit architecture for unit testing 
-			frameworks. 
-			http://junit.sourceforge.net/ -->
+				It is an instance of the xUnit architecture for unit testing 
+				frameworks. 
+				http://junit.sourceforge.net/ -->
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.1</version>
 		</dependency>
 		<!-- JUNIT -->
-		
+
 		<!-- JAXME/JAXB -->
 		<!-- JaxMe 2 is an open source implementation of JAXB, the specification 
-		for Java/XML binding. 
-		http://ws.apache.org/jaxme/ -->
+			for Java/XML binding. 
+			http://ws.apache.org/jaxme/ -->
 		<dependency>
 			<groupId>jaxme</groupId>
 			<artifactId>jaxme2</artifactId>
@@ -272,39 +321,39 @@
 			<version>0.5.1</version>
 		</dependency>
 		<!-- JAXME/JAXB -->
-		
+
 		<!-- XALAN -->
 		<dependency>
 			<!-- Xalan-Java is an XSLT processor for transforming XML documents into 
-			HTML, text, or other XML document types. It implements XSL Transformations 
-			(XSLT) Version 1.0 and XML Path Language (XPath) Version 1.0 and can be 
-			used from the command line, in an applet or a servlet, or as a module 
-			in other program. 
-			http://xml.apache.org/xalan-j/ -->
+				HTML, text, or other XML document types. It implements XSL Transformations 
+				(XSLT) Version 1.0 and XML Path Language (XPath) Version 1.0 and can be 
+				used from the command line, in an applet or a servlet, or as a module 
+				in other program. 
+				http://xml.apache.org/xalan-j/ -->
 			<groupId>xalan</groupId>
 			<artifactId>xalan</artifactId>
 			<version>2.7.0</version>
 		</dependency>
 		<!-- XALAN -->
-		
+
 		<!-- COMMONS-LOGGING -->
 		<dependency>
 			<!-- The Logging package is an ultra-thin bridge between different 
-			logging implementations. A library that uses the commons-logging 
-			API can be used with any logging implementation at runtime. 
-			http://commons.apache.org/logging/ -->
+				logging implementations. A library that uses the commons-logging 
+				API can be used with any logging implementation at runtime. 
+				http://commons.apache.org/logging/ -->
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.1</version>
 		</dependency>
 		<!-- COMMONS-LOGGING -->
-		
+
 		<!-- PROTEGE-OWL -->
 		<dependency>
 			<!-- ICU is a mature, widely used set of C/C++ and Java libraries 
-			providing Unicode and Globalization support for software applications.
-			Necessary for Protege. 
-			http://www.icu-project.org/ -->
+				providing Unicode and Globalization support for software applications.
+				Necessary for Protege. 
+				http://www.icu-project.org/ -->
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
 			<version>3.8</version>
@@ -317,67 +366,67 @@
 		</dependency>
 		<dependency>
 			<!-- Jena is a Java framework for building Semantic Web applications.
-			It provides a programmatic environment for RDF, RDFS and OWL, SPARQL 
-			and includes a rule-based inference engine.
-			Necessary for Protege.
-			http://jena.sourceforge.net/ -->
+				It provides a programmatic environment for RDF, RDFS and OWL, SPARQL 
+				and includes a rule-based inference engine.
+				Necessary for Protege.
+				http://jena.sourceforge.net/ -->
 			<groupId>guess</groupId>
 			<artifactId>jena</artifactId>
 			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<!-- The Xerces Java Parser 1.4.4 supports the XML 1.0 recommendation 
-			and contains advanced parser functionality, such as support for the 
-			W3C's XML Schema recommendation version 1.0, DOM Level 2 version 1.0, 
-			and SAX Version 2, in addition to supporting the industry-standard DOM 
-			Level 1 and SAX version 1 APIs. 
-			Necessary for Protege. 
-			http://xerces.apache.org/xerces-j/ -->
+				and contains advanced parser functionality, such as support for the 
+				W3C's XML Schema recommendation version 1.0, DOM Level 2 version 1.0, 
+				and SAX Version 2, in addition to supporting the industry-standard DOM 
+				Level 1 and SAX version 1 APIs. 
+				Necessary for Protege. 
+				http://xerces.apache.org/xerces-j/ -->
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.8.1</version>
 		</dependency>
 		<dependency>
 			<!-- PowerLoom is a full-function, logic-based knowledge representation 
-			and reasoning system, that supports all aspects of knowledge-based 
-			applications. 
-			http://www.isi.edu/isd/LOOM/PowerLoom/documentation/manual/manual_2.html -->
+				and reasoning system, that supports all aspects of knowledge-based 
+				applications. 
+				http://www.isi.edu/isd/LOOM/PowerLoom/documentation/manual/manual_2.html -->
 			<groupId>guess</groupId>
 			<artifactId>powerloom</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<!-- STELLA is a strongly typed, object-oriented, Lisp-like language, 
-			designed to facilitate symbolic programming tasks in artificial intelligence 
-			applications. Necessary for PowerLoom. 
-			http://www.isi.edu/isd/LOOM/Stella/ -->
+				designed to facilitate symbolic programming tasks in artificial intelligence 
+				applications. Necessary for PowerLoom. 
+				http://www.isi.edu/isd/LOOM/Stella/ -->
 			<groupId>guess</groupId>
 			<artifactId>stella</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<!-- Protégé is a free, open source ontology editor and knowledge-base 
-			framework. 
-			http://protege.stanford.edu/-->
+				framework. 
+				http://protege.stanford.edu/-->
 			<groupId>guess</groupId>
 			<artifactId>protege</artifactId>
 			<version>3.2</version>
 		</dependency>
 		<dependency>
 			<!-- The Protégé-OWL editor is an extension of Protégé that supports 
-			the Web Ontology Language (OWL). 
-			http://protege.stanford.edu/overview/protege-owl.html -->
+				the Web Ontology Language (OWL). 
+				http://protege.stanford.edu/overview/protege-owl.html -->
 			<groupId>guess</groupId>
 			<artifactId>protege-owl</artifactId>
 			<version>3.2</version>
 		</dependency>
 		<!-- PROTEGE-OWL -->
-		
+
 		<!-- MIGLAYOUT -->
 		<dependency>
 			<!-- MiGLayout is the most versatile and flexible Swing and SWT Layout 
-			Manager for Java, yet it is very easy to learn and use. 
-			http://www.miglayout.com/ -->
+				Manager for Java, yet it is very easy to learn and use. 
+				http://www.miglayout.com/ -->
 			<groupId>guess</groupId>
 			<artifactId>miglayout15-swing</artifactId>
 			<version>1.0</version>
@@ -385,11 +434,35 @@
 		<!-- MIGLAYOUT -->
 
 	</dependencies>
-	<!-- reporting>
+	<reporting>
 		<plugins>
 			<plugin>
-				<artifactId>maven-surefire-report-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>
+					maven-project-info-reports-plugin
+				</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>dependencies</report>
+							<report>project-team</report>
+							<report>mailing-list</report>
+							<report>issue-tracking</report>
+							<report>license</report>
+							<report>scm</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>changes-maven-plugin</artifactId>
+			</plugin>
+
+			<!-- plugin>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				</plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
@@ -406,61 +479,61 @@
 					<aggregate>true</aggregate>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-					<rulesets>
-						<ruleset>/rulesets/basic.xml</ruleset>
-						<ruleset>/rulesets/imports.xml</ruleset>
-						<ruleset>/rulesets/unusedcode.xml</ruleset>
-						<ruleset>/rulesets/finalizers.xml</ruleset>
-					</rulesets>
+				<source>1.5</source>
+				<target>1.5</target>
+				<rulesets>
+				<ruleset>/rulesets/basic.xml</ruleset>
+				<ruleset>/rulesets/imports.xml</ruleset>
+				<ruleset>/rulesets/unusedcode.xml</ruleset>
+				<ruleset>/rulesets/finalizers.xml</ruleset>
+				</rulesets>
 				</configuration>
-			</plugin>
-			<plugin>
+				</plugin>
+				<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-					<configLocation>
-						config/maven_checks.xml
-					</configLocation>
+				<source>1.5</source>
+				<target>1.5</target>
+				<configLocation>
+				config/maven_checks.xml
+				</configLocation>
 				</configuration>
-			</plugin>
-			<plugin>
+				</plugin>
+				<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>taglist-maven-plugin</artifactId>
 				<configuration>
-					<tags>
-						<tag>TODO</tag>
-						<tag>@todo</tag>
-						<tag>FIXME</tag>
-						<tag>XXX</tag>
-					</tags>
+				<tags>
+				<tag>TODO</tag>
+				<tag>@todo</tag>
+				<tag>FIXME</tag>
+				<tag>XXX</tag>
+				</tags>
 				</configuration>
-			</plugin>
-			<plugin>
+				</plugin>
+				<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
+				</plugin>
+				<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>clirr-maven-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-					<minSeverity>info</minSeverity>
+				<source>1.5</source>
+				<target>1.5</target>
+				<minSeverity>info</minSeverity>
 				</configuration>
-			</plugin>
+				</plugin -->
 		</plugins>
-	</reporting-->
+	</reporting>
 	<distributionManagement>
 		<site>
-			<id>website</id>
+			<id>unbbayes.website</id>
 			<url>ftp://sourceforge.net/www/u/un/unbbayes</url>
 		</site>
 	</distributionManagement>
