--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -4,93 +4,79 @@
 	<groupId>br.unb.cic</groupId>
 	<artifactId>unbbayes</artifactId>
 	<name>UnBBayes</name>
-	<version>3.27.9-BETA</version>
-	<url>http://unbbayes.sourceforge.net</url>
+	<version>3.41.5-BETA</version>
+	<url>http://unbbayes.sourceforge.net
+	</url>
 	<licenses>
 		<license>
-			<name>
-				GNU General Public License, Version 3, 29 June 2007
-			</name>
-			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
+			<name> GNU General Public License, Version 3, 29 June 2007</name>
+			<url>http://www.gnu.org/licenses/gpl-3.0.txt
+			</url>
 			<distribution>manual</distribution>
 		</license>
 	</licenses>
 	<issueManagement>
 		<system>SourceForge Tracker</system>
-		<url>http://sourceforge.net/tracker/?group_id=47519</url>
+		<url>http://sourceforge.net/tracker/?group_id=47519
+		</url>
 	</issueManagement>
-	<!-- ciManagement>
-		<system>Continuum</system>
-		<url>http://integrationserver.wakaleo.com/continuum</url>
-		<notifiers>
-		<notifier>
-		<type>mail</type>
-		<address>rommel.carvalho@gmail.com</address>
-		</notifier>
-		</notifiers>
-		</ciManagement -->
+	<!--
+		ciManagement> <system>Continuum</system>
+		<url>http://integrationserver.wakaleo.com/continuum</url> <notifiers>
+		<notifier> <type>mail</type>
+		<address>rommel.carvalho@gmail.com</address> </notifier> </notifiers>
+		</ciManagement
+	-->
 	<inceptionYear>2001</inceptionYear>
 	<mailingLists>
 		<mailingList>
-			<name>
-				Announcements. All messages on this list are also sent
-				to the users list.
-			</name>
-			<subscribe>
-				unbbayes-announce-subscribe@lists.sourceforge.net
+			<name> Announcements. All messages on this list are also sent to the
+				users list.</name>
+			<subscribe> unbbayes-announce-subscribe@lists.sourceforge.net
 			</subscribe>
-			<unsubscribe>
-				unbbayes-announce-unsubscribe@lists.sourceforge.net
+			<unsubscribe> unbbayes-announce-unsubscribe@lists.sourceforge.net
 			</unsubscribe>
-			<post>unbbayes-announce@lists.sourceforge.net</post>
+			<post>unbbayes-announce@lists.sourceforge.net
+			</post>
 			<archive>
 				http://sourceforge.net/mailarchive/forum.php?forum_name=unbbayes-announce
 			</archive>
 		</mailingList>
 		<mailingList>
-			<name>
-				A subscriber-only list for those interested in
-				developing UnBBayes.
-			</name>
-			<subscribe>
-				unbbayes-developers-subscribe@lists.sourceforge.net
+			<name> A subscriber-only list for those interested in developing
+				UnBBayes.</name>
+			<subscribe> unbbayes-developers-subscribe@lists.sourceforge.net
 			</subscribe>
-			<unsubscribe>
-				unbbayes-developers-unsubscribe@lists.sourceforge.net
+			<unsubscribe> unbbayes-developers-unsubscribe@lists.sourceforge.net
 			</unsubscribe>
-			<post>unbbayes-developers@lists.sourceforge.net</post>
+			<post>unbbayes-developers@lists.sourceforge.net
+			</post>
 			<archive>
 				http://sourceforge.net/mailarchive/forum.php?forum_name=unbbayes-developers
 			</archive>
 		</mailingList>
 		<mailingList>
-			<name>
-				A subscriber-only list for those interested in
-				translating UnBBayes.
-			</name>
-			<subscribe>
-				unbbayes-translators-subscribe@lists.sourceforge.net
+			<name> A subscriber-only list for those interested in translating
+				UnBBayes.</name>
+			<subscribe> unbbayes-translators-subscribe@lists.sourceforge.net
 			</subscribe>
-			<unsubscribe>
-				unbbayes-translators-unsubscribe@lists.sourceforge.net
+			<unsubscribe> unbbayes-translators-unsubscribe@lists.sourceforge.net
 			</unsubscribe>
-			<post>unbbayes-translators@lists.sourceforge.net</post>
+			<post>unbbayes-translators@lists.sourceforge.net
+			</post>
 			<archive>
 				http://sourceforge.net/mailarchive/forum.php?forum_name=unbbayes-translators
 			</archive>
 		</mailingList>
 		<mailingList>
-			<name>
-				A subscriber-only list for those interested in
-				discussing about UnBBayes.
-			</name>
-			<subscribe>
-				unbbayes-users-subscribe@lists.sourceforge.net
+			<name> A subscriber-only list for those interested in discussing
+				about UnBBayes.</name>
+			<subscribe> unbbayes-users-subscribe@lists.sourceforge.net
 			</subscribe>
-			<unsubscribe>
-				unbbayes-users-unsubscribe@lists.sourceforge.net
+			<unsubscribe> unbbayes-users-unsubscribe@lists.sourceforge.net
 			</unsubscribe>
-			<post>unbbayes-users@lists.sourceforge.net</post>
+			<post>unbbayes-users@lists.sourceforge.net
+			</post>
 			<archive>
 				http://sourceforge.net/mailarchive/forum.php?forum_name=unbbayes-users
 			</archive>
@@ -160,22 +146,23 @@
 			<email>klaskey@gmu.edu</email>
 			<url>http://ite.gmu.edu/~klaskey</url>
 			<organization>George Mason University - GMU</organization>
-			<organizationUrl>http://www.gmu.edu</organizationUrl>
+			<organizationUrl>http://www.gmu.edu
+			</organizationUrl>
 			<roles>
 				<role>Consultant</role>
 			</roles>
 			<timezone>-4</timezone>
 		</contributor>
 	</contributors>
-
 	<scm>
 		<connection>
-			scm:cvs:pserver:anonymous@unbbayes.cvs.sourceforge.net:/cvsroot/unbbayes:UnBBayes
+			scm:svn:https://unbbayes.svn.sourceforge.net/svnroot/unbbayes/trunk
 		</connection>
 		<developerConnection>
-			scm:cvs:ext:developername@unbbayes.cvs.sourceforge.net:/cvsroot/unbbayes:UnBBayes
+			scm:svn:https://unbbayes.svn.sourceforge.net/svnroot/unbbayes/trunk/
 		</developerConnection>
-		<url>http://unbbayes.cvs.sourceforge.net/unbbayes/</url>
+		<url>http://unbbayes.svn.sourceforge.net/viewvc/unbbayes/trunk
+		</url>
 	</scm>
 	<organization>
 		<name>University of Brasilia - UnB</name>
@@ -190,7 +177,6 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -204,16 +190,15 @@
 					</archive>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptors>
-						<descriptor>src/assembly/dist.xml</descriptor>
+						<descriptor>src/assembly/dist.xml
+						</descriptor>
 					</descriptors>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-site-plugin</artifactId>
 				<configuration>
@@ -231,18 +216,23 @@
 					</execution>
 				</executions>
 				<configuration>
-					<!-- BEGIN - this is a work around, because the plugin does not work as documented -->
-					<target>
-						${project.build.directory}/target/jaxme/java
-					</target>
+					<!--
+						BEGIN - this is a work around, because the plugin does not work as
+						documented
+					-->
+					<target> ${project.build.directory}/target/jaxme/java</target>
 					<resourceTarget>
 						${project.build.directory}/../target/jaxme/resources
 					</resourceTarget>
-					<!--  END  - this is a work around, because the plugin does not work as documented -->
+					<!--
+						END - this is a work around, because the plugin does not work as
+						documented
+					-->
 					<schemas>
 						<!-- >value>src/main/xsd/XMLBIF_0_5.xsd</value -->
 					</schemas>
-					<packageName>unbbayes.io.xmlbif.version5.xmlclasses</packageName>
+					<packageName>unbbayes.io.xmlbif.version5.xmlclasses
+					</packageName>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -251,10 +241,13 @@
 
 		<!-- JAVAHELP -->
 		<dependency>
-			<!-- JavaHelp is an open source software, a full-featured, platform-independent,
-				extensible help system that enables you to incorporate online help in applets,
-				components, applications, operating systems, and devices. 
-				http://java.sun.com/javase/technologies/desktop/javahelp/ -->
+			<!--
+				JavaHelp is an open source software, a full-featured,
+				platform-independent, extensible help system that enables you to
+				incorporate online help in applets, components, applications,
+				operating systems, and devices.
+				http://java.sun.com/javase/technologies/desktop/javahelp/
+			-->
 			<groupId>javax.help</groupId>
 			<artifactId>javahelp</artifactId>
 			<version>2.0.02</version>
@@ -272,10 +265,11 @@
 
 		<!-- JUNIT -->
 		<dependency>
-			<!-- JUnit is a simple framework to write repeatable tests. 
-				It is an instance of the xUnit architecture for unit testing 
-				frameworks. 
-				http://junit.sourceforge.net/ -->
+			<!--
+				JUnit is a simple framework to write repeatable tests. It is an
+				instance of the xUnit architecture for unit testing frameworks.
+				http://junit.sourceforge.net/
+			-->
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.1</version>
@@ -283,9 +277,10 @@
 		<!-- JUNIT -->
 
 		<!-- JAXME/JAXB -->
-		<!-- JaxMe 2 is an open source implementation of JAXB, the specification 
-			for Java/XML binding. 
-			http://ws.apache.org/jaxme/ -->
+		<!--
+			JaxMe 2 is an open source implementation of JAXB, the specification
+			for Java/XML binding. http://ws.apache.org/jaxme/
+		-->
 		<dependency>
 			<groupId>jaxme</groupId>
 			<artifactId>jaxme2</artifactId>
@@ -315,12 +310,14 @@
 		
 		<!-- XALAN -->
 		<dependency>
-			<!-- Xalan-Java is an XSLT processor for transforming XML documents into 
-				HTML, text, or other XML document types. It implements XSL Transformations 
-				(XSLT) Version 1.0 and XML Path Language (XPath) Version 1.0 and can be 
-				used from the command line, in an applet or a servlet, or as a module 
-				in other program. 
-				http://xml.apache.org/xalan-j/ -->
+			<!--
+				Xalan-Java is an XSLT processor for transforming XML documents into
+				HTML, text, or other XML document types. It implements XSL
+				Transformations (XSLT) Version 1.0 and XML Path Language (XPath)
+				Version 1.0 and can be used from the command line, in an applet or a
+				servlet, or as a module in other program.
+				http://xml.apache.org/xalan-j/
+			-->
 			<groupId>xalan</groupId>
 			<artifactId>xalan</artifactId>
 			<version>2.7.0</version>
@@ -329,10 +326,12 @@
 
 		<!-- COMMONS-LOGGING -->
 		<dependency>
-			<!-- The Logging package is an ultra-thin bridge between different 
-				logging implementations. A library that uses the commons-logging 
-				API can be used with any logging implementation at runtime. 
-				http://commons.apache.org/logging/ -->
+			<!--
+				The Logging package is an ultra-thin bridge between different
+				logging implementations. A library that uses the commons-logging API
+				can be used with any logging implementation at runtime.
+				http://commons.apache.org/logging/
+			-->
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.1</version>
@@ -341,10 +340,11 @@
 
 		<!-- PROTEGE-OWL -->
 		<dependency>
-			<!-- ICU is a mature, widely used set of C/C++ and Java libraries 
-				providing Unicode and Globalization support for software applications.
-				Necessary for Protege. 
-				http://www.icu-project.org/ -->
+			<!--
+				ICU is a mature, widely used set of C/C++ and Java libraries
+				providing Unicode and Globalization support for software
+				applications. Necessary for Protege. http://www.icu-project.org/
+			-->
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
 			<version>3.8</version>
@@ -356,57 +356,66 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<!-- Jena is a Java framework for building Semantic Web applications.
-				It provides a programmatic environment for RDF, RDFS and OWL, SPARQL 
-				and includes a rule-based inference engine.
-				Necessary for Protege.
-				http://jena.sourceforge.net/ -->
+			<!--
+				Jena is a Java framework for building Semantic Web applications. It
+				provides a programmatic environment for RDF, RDFS and OWL, SPARQL
+				and includes a rule-based inference engine. Necessary for Protege.
+				http://jena.sourceforge.net/
+			-->
 			<groupId>guess</groupId>
 			<artifactId>jena</artifactId>
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<!-- The Xerces Java Parser 1.4.4 supports the XML 1.0 recommendation 
-				and contains advanced parser functionality, such as support for the 
-				W3C's XML Schema recommendation version 1.0, DOM Level 2 version 1.0, 
-				and SAX Version 2, in addition to supporting the industry-standard DOM 
-				Level 1 and SAX version 1 APIs. 
-				Necessary for Protege. 
-				http://xerces.apache.org/xerces-j/ -->
+			<!--
+				The Xerces Java Parser 1.4.4 supports the XML 1.0 recommendation and
+				contains advanced parser functionality, such as support for the
+				W3C's XML Schema recommendation version 1.0, DOM Level 2 version
+				1.0, and SAX Version 2, in addition to supporting the
+				industry-standard DOM Level 1 and SAX version 1 APIs. Necessary for
+				Protege. http://xerces.apache.org/xerces-j/
+			-->
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.8.1</version>
 		</dependency>
 		<dependency>
-			<!-- PowerLoom is a full-function, logic-based knowledge representation 
-				and reasoning system, that supports all aspects of knowledge-based 
-				applications. 
-				http://www.isi.edu/isd/LOOM/PowerLoom/documentation/manual/manual_2.html -->
+			<!--
+				PowerLoom is a full-function, logic-based knowledge representation
+				and reasoning system, that supports all aspects of knowledge-based
+				applications.
+				http://www.isi.edu/isd/LOOM/PowerLoom/documentation/manual/manual_2.html
+			-->
 			<groupId>guess</groupId>
 			<artifactId>powerloom</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
-			<!-- STELLA is a strongly typed, object-oriented, Lisp-like language, 
-				designed to facilitate symbolic programming tasks in artificial intelligence 
-				applications. Necessary for PowerLoom. 
-				http://www.isi.edu/isd/LOOM/Stella/ -->
+			<!--
+				STELLA is a strongly typed, object-oriented, Lisp-like language,
+				designed to facilitate symbolic programming tasks in artificial
+				intelligence applications. Necessary for PowerLoom.
+				http://www.isi.edu/isd/LOOM/Stella/
+			-->
 			<groupId>guess</groupId>
 			<artifactId>stella</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
-			<!-- Protégé is a free, open source ontology editor and knowledge-base 
-				framework. 
-				http://protege.stanford.edu/-->
+			<!--
+				Protégé is a free, open source ontology editor and knowledge-base
+				framework. http://protege.stanford.edu/
+			-->
 			<groupId>guess</groupId>
 			<artifactId>protege</artifactId>
 			<version>3.2</version>
 		</dependency>
 		<dependency>
-			<!-- The Protégé-OWL editor is an extension of Protégé that supports 
-				the Web Ontology Language (OWL). 
-				http://protege.stanford.edu/overview/protege-owl.html -->
+			<!--
+				The Protégé-OWL editor is an extension of Protégé that supports the
+				Web Ontology Language (OWL).
+				http://protege.stanford.edu/overview/protege-owl.html
+			-->
 			<groupId>guess</groupId>
 			<artifactId>protege-owl</artifactId>
 			<version>3.2</version>
@@ -415,27 +424,26 @@
 
 		<!-- MIGLAYOUT -->
 		<dependency>
-			<!-- MiGLayout is the most versatile and flexible Swing and SWT Layout 
-				Manager for Java, yet it is very easy to learn and use. 
-				http://www.miglayout.com/ -->
+			<!--
+				MiGLayout is the most versatile and flexible Swing and SWT Layout
+				Manager for Java, yet it is very easy to learn and use.
+				http://www.miglayout.com/
+			-->
 			<groupId>guess</groupId>
 			<artifactId>miglayout15-swing</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<!-- MIGLAYOUT -->
-
 	</dependencies>
 	<reporting>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>
-					maven-project-info-reports-plugin
-				</artifactId>
+				<artifactId> maven-project-info-reports-plugin</artifactId>
 				<reportSets>
 					<reportSet>
 						<reports>
-							<report>dependencies</report>
+							<!--  >report>dependencies</report -->
 							<report>project-team</report>
 							<report>mailing-list</report>
 							<report>issue-tracking</report>
@@ -444,6 +452,21 @@
 						</reports>
 					</reportSet>
 				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-changes-plugin</artifactId>
+				<inherited>false</inherited>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>changes-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+				<configuration>
+					<issueLinkTemplate>http://sourceforge.net/support/tracker.php?aid=%ISSUE%</issueLinkTemplate>
+  				</configuration>
 			</plugin>
 
 			<plugin>
@@ -524,8 +547,8 @@
 	</reporting>
 	<distributionManagement>
 		<site>
-			<id>www.unbbayes.sourceforge.net</id>
-			<url>scp://sourceforge.net/www/u/un/unbbayes</url>
-		</site>
+  		 	<id>sourceforge.net</id>
+   			<url>scp://shell.sourceforge.net/home/groups/u/un/unbbayes/htdocs</url>
+  		</site>
 	</distributionManagement>
 </project>
